--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -1,14 +1,13 @@
-// src/sections/About.scss
 .about {
   color: #333;
 
   h1 {
-    font-size: 2.5rem; // Taille du titre
+    font-size: 2.5rem;
     margin-bottom: 1rem;
   }
 
   p {
-    font-size: 1.2rem; // Taille du texte
+    font-size: 1.2rem;
     line-height: 1.6;
   }
 }
