--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -42,9 +42,9 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  flex-direction: column;
 
   @media (max-width: 768px) {
+    flex-direction: column; /* Sur les petits écrans, les éléments passent en colonne */
     align-items: center;
   }
 }
@@ -55,6 +55,7 @@
   overflow-y: auto;
   max-height: 400px;
   padding-right: 10px;
+
   p {
     text-align: justify;
   }
@@ -74,14 +75,10 @@
   }
 }
 
-.modal-tags {
-  margin-top: 10px;
-}
-
 .modal-buttons {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-end; /* Aligne les boutons à droite */
   flex-shrink: 0;
   gap: 15px;
 }
